--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+:root {
+	--vh: 100%;
+}
 
 /* Typography */
 .sound-only {
@@ -775,7 +778,7 @@ footer.on .inner a img{
 	}
 
 	.visual .title-sect{
-		top: 200px;
+		top: 22%;
 	}
 	.deco{
 		margin-right: 2px;
@@ -784,7 +787,7 @@ footer.on .inner a img{
 		font-size: 20px;
 	}
 	.visual .desc-sect{
-		bottom: 200px;
+		bottom: 22%;
 		right: 20px;
 	}
 	.visual .copy-sect{
