--- a/main.css
+++ b/main.css
@@ -338,9 +338,7 @@ header .logo a {
 .visual {
 	position: relative;
 	width: 100%;
-	height: 100vh;
-	height: -webkit-fill-available;
-	height: fill-available;
+	height: calc(var(--vh, 1vh) * 100);
 	overflow: hidden;
 }
 
